# ms-hs-football-playoff-engine

./: .coverage  .env.example  .gitignore  Dockerfile.api  Dockerfile.prefect  LICENSE  PLAYOFF_HOME_RULES.md  README.md  SCENARIO_RULES.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  flow.py  requirements.txt
backend/api/: auth.py  db.py  limiter.py  main.py
backend/api/models/: requests.py  responses.py
backend/api/routers/: admin.py  auth_router.py  bracket.py  games.py  hosting.py  images.py  meta.py  moderation.py  rankings.py  ratings.py  standings.py  submissions.py  users.py
backend/helpers/: api_helpers.py  bracket_helpers.py  bracket_home_odds.py  data_classes.py  data_helpers.py  database_helpers.py  home_game_scenarios.py  image_helpers.py  insights.py  query_helpers.py  scenario_explainer.py  scenario_renderer.py  scenario_serializers.py  scenario_updater.py  scenario_viewer.py  scenarios.py  submission_helpers.py  tiebreakers.py  user_helpers.py  web_helpers.py  win_probability.py
backend/prefect/: Dockerfile.prefect  ahsfhs_schedule_pipeline.py  flows.py  maxpreps_data_pipeline.py  misshsaa_school_pipeline.py  nces_school_pipeline.py  playoff_pipeline.py  region_scenarios_pipeline.py  regions_data_pipeline.py  school_info_pipeline.py  template_pipeline.py
backend/scripts/: add_playoff_season.py  assign_championship_venue.py  benchmark_r6_region_7_3a.py  benchmark_scenario_engine.py  bootstrap_owner.py  demo_probabilities.py  dump_mhsaa_directory.py  enumerate_all_regions_scenarios.py  gen_pre_final_week_fixtures.py  seed_logos.py  simulate_region_finish.py  start-api.sh  stop-api.sh  visualize_final_week.py
backend/tests/: bracket_home_odds_2025_test.py  bracket_home_odds_probabilistic_test.py  data_classes_test.py  data_helpers_test.py  ground_truth_2025_test.py  pre_final_week_2025_test.py  pre_final_week_exact_2025_test.py  region_standings_test.py  scenario_output_2_1a_test.py  scenario_output_5_1a_test.py  scenario_output_5_2a_test.py  scenario_output_8_1a_test.py  scenario_renderer_test.py  scenario_viewer_test.py  scenarios_helpers_test.py  simulate_region_finish_test.py
backend/tests/bracket/: bracket_home_odds_2025_test.py  bracket_home_odds_probabilistic_test.py  home_game_scenarios_test.py  pre_playoff_home_scenarios_test.py
backend/tests/data/: playoff_brackets_2025.py  playoff_games_2025.json  playoff_games_2025.py  pre_final_week_2025_expected.py  results_2025_ground_truth.py  standings_2025_3_7a.py
backend/tests/integration/: ground_truth_2025_test.py  pre_final_week_2025_test.py  pre_playoff_home_scenarios_integration_test.py  resolve_with_results_test.py  scenario_verification_test.py  team_matchups_test.py
backend/tests/scenario_output/: scenario_output_1_2a_non_margin_test.py  scenario_output_1_3a_test.py  scenario_output_1_4a_test.py  scenario_output_1_6a_test.py  scenario_output_2_1a_test.py  scenario_output_2_2a_test.py  scenario_output_2_3a_midseason_test.py  scenario_output_2_3a_test.py  scenario_output_2_5a_test.py  scenario_output_2_7a_test.py  scenario_output_3_1a_test.py  scenario_output_3_4a_test.py  scenario_output_3_6a_test.py  scenario_output_3_7a_non_margin_test.py  (+13 more)
docs/: API_FRONTEND_GAPS.md  API_REFERENCE.md  API_TESTING_CHECKLIST.md  AUTH0_SETUP.md  AUTH_PHASE_TWO.md  COVERAGE_GAPS.md  DEPLOYMENT_SECURITY.md  IMAGE_HOSTING.md  LIVE_SCORES.md  LIVE_SCORES_PROPOSAL.md  ODDS_DISCLAIMER.md  PLAYOFF_HOME_RULES.md  SCENARIO_COMPUTATION.md  SCHEMA.md  SEASON_SETUP.md  VM_DEPLOYMENT.md  scenarios_3_7a_2025_final_week.md  taylorsville_home_scenarios_2025.md
nginx/: nginx.conf
nginx/html/: index.html
output/: render_1_2a.txt  render_8_1a.txt
prefect/: Dockerfile.prefect  ahsfhs_schedule_pipeline.py  data_classes.py  data_helpers.py  database_helpers.py  flows.py  homes_data_pipeline.py  locations_data_pipeline.py  maxpreps_data_pipeline.py  playoff_bracket_pipeline.py  region_scenarios_pipeline.py  regions_data_pipeline.py  requirements.txt  school_info_pipeline.py  template_pipeline.py  web_helpers.py
prefect_files/: Dockerfile.prefect  ahsfhs_schedule_pipeline.py  data_classes.py  data_helpers.py  database_helpers.py  flows.py  maxpreps_data_pipeline.py  playoff_bracket_pipeline.py  region_scenarios_pipeline.py  regions_data_pipeline.py  requirements.txt  scenarios.py  school_info_pipeline.py  template_pipeline.py  tiebreakers.py  web_helpers.py
prefect_files/tests/: COVERAGE_GAPS.md  region_standings_test.py
scripts/: all_scenarios.txt  all_scenarios_1_4.txt  all_scenarios_5_7.txt  all_seeding_odds.txt  compute_test_expected_values.py  dicts.txt  enumerate_all_regions_scenarios.py  generate_all_seeding_odds.py  odds.csv  scenarios.txt  scenarios_letter.txt  seeding_odds.txt  simulate_region_finish.py  simulate_region_finish_dicts.py  simulate_region_finish_odds_enum.py  simulate_region_finish_odds_enum_with_scenarios.py  visualize_final_week.py
sql/: get_standings_for_region.sql  init.sql  override_helpers.sql  simulate_region_finish_odds.sql  simulate_region_finish_odds_v2.sql
sql/corrections/: salem_forfeit_2025.sql
sql/seeds/: locations_championship_stadiums.sql  playoff_format_template.yaml  playoff_formats_2025.sql  playoff_formats_2026.sql  seed_mhsaa_identity.sql  seed_private_school_locations.sql
(+24 files in other folders)
