[project]
name = "ms-hs-football-playoff-engine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "prefect>=2.16,<3",
    "requests>=2.31",
    "pandas>=2.2",
    "lxml>=5.2",
    "psycopg2-binary>=2.9",
    "psycopg[binary]>=3.1",
    "playwright>=1.47",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["prefect_files/tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E741",  # ambiguous variable name — 'l' is a legitimate abbreviation for losses in sports stats
]

[tool.ruff.lint.isort]
known-first-party = ["prefect_files"]
