[project]
name = "ms-hs-football-playoff-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "prefect>=2.16,<3",
    "requests>=2.31",
    "pandas>=2.2",
    "lxml>=5.2",
    "psycopg2-binary>=2.9",
    "psycopg[binary]>=3.1",
    "playwright>=1.47",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["prefect_files/tests"]
addopts = "--cov=prefect_files --cov-branch --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E741",  # ambiguous variable name — 'l' is a legitimate abbreviation for losses in sports stats
]

[tool.ruff.lint.isort]
known-first-party = ["prefect_files"]

[tool.coverage.run]
branch = true
source = ["prefect_files"]

[tool.coverage.report]
# Exclude Prefect pipeline files — these require a live DB/Prefect and are
# not unit-testable in isolation. Coverage numbers reflect pure logic only.
omit = [
    "prefect_files/ahsfhs_schedule_pipeline.py",
    "prefect_files/database_helpers.py",
    "prefect_files/flows.py",
    "prefect_files/maxpreps_data_pipeline.py",
    "prefect_files/playoff_bracket_pipeline.py",
    "prefect_files/region_scenarios_pipeline.py",
    "prefect_files/regions_data_pipeline.py",
    "prefect_files/school_info_pipeline.py",
    "prefect_files/template_pipeline.py",
    "prefect_files/web_helpers.py",
    "prefect_files/tests/*",
]
